--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.13",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.542.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-syntax-highlighter": "^15.5.13",
